refacto dashboard in several modules
Signed-off-by: Simon Martinez <1263852+simonmartinez@users.noreply.github.com>

--- a/ui/dashboard/src/app/@routes/base/base.html
+++ b/ui/dashboard/src/app/@routes/base/base.html
@@ -13,6 +13,9 @@
         <a class="nav-link" routerLink="/templates">Templates</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" routerLink="/functions">Functions</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" routerLink="/stats">Stats</a>
       </li>
     </ul>
