--- a/ui/dashboard/src/app/@routes/templates/templates.html
+++ b/ui/dashboard/src/app/@routes/templates/templates.html
@@ -7,7 +7,7 @@
       <table class="table">
         <thead>
           <tr>
-            <th scope="col"></th>
+            <th scope="col" width="40px"></th>
             <th scope="col">Name</th>
             <th scope="col">Description</th>
             <th scope="col"></th>
