--- a/ui/dashboard/src/styles/step.sass
+++ b/ui/dashboard/src/styles/step.sass
@@ -9,37 +9,37 @@
   
   margin-bottom: 8px
 
-.utask_state_steps
-  padding: 0 !important
-  .utask_state_steps-state
-    padding: 0.25rem 0.75rem 1.25rem 0.75rem
-    text-align: center
-    font-weight: 600
+// .utask_state_steps
+//   padding: 0 !important
+//   .utask_state_steps-state
+//     padding: 0.25rem 0.75rem 1.25rem 0.75rem
+//     text-align: center
+//     font-weight: 600
 
-    &__DONE
-      background: $color-success
-      color: white
-      padding: 0.75rem
-      transition: background 1.25s
-    &__RUNNING
-      background-color: $color-primary
-      background-image: linear-gradient(-45deg, transparent 33%, rgba(0, 0, 0, .1) 33%, rgba(0, 0, 0, .1) 66%, transparent 66%)
-      background-size: 4rem 2rem, 100% 100%, 100% 100%
-      animation: animate-state-running 1s linear infinite
-      color: white
-      transition: background 1.25s
-    &__CANCELLED, &__WONTFIX
-      background: $color-warning
-      color: white
-      transition: background 1.25s
-    &__BLOCKED
-      background: $color-danger
-      color: white
-      transition: background 1.25s
-    &__TODO
-      background: $color-primary
-      color: white
-      transition: background 1.25s
+//     &__DONE
+//       background: $color-success
+//       color: white
+//       padding: 0.75rem
+//       transition: background 1.25s
+//     &__RUNNING
+//       background-color: $color-primary
+//       background-image: linear-gradient(-45deg, transparent 33%, rgba(0, 0, 0, .1) 33%, rgba(0, 0, 0, .1) 66%, transparent 66%)
+//       background-size: 4rem 2rem, 100% 100%, 100% 100%
+//       animation: animate-state-running 1s linear infinite
+//       color: white
+//       transition: background 1.25s
+//     &__CANCELLED, &__WONTFIX
+//       background: $color-warning
+//       color: white
+//       transition: background 1.25s
+//     &__BLOCKED
+//       background: $color-danger
+//       color: white
+//       transition: background 1.25s
+//     &__TODO
+//       background: $color-primary
+//       color: white
+//       transition: background 1.25s
 
 @keyframes animate-state-running
   from
