feat: using utask lib

--- a/ui/dashboard/src/app/@routes/stats/stats.html
+++ b/ui/dashboard/src/app/@routes/stats/stats.html
@@ -1,8 +1,8 @@
 <h2>Task states</h2>
 <div class="row">
     <div class="col-6">
-        <app-chart-task-states [data]="taskStates">
-        </app-chart-task-states>
+        <utask-chart-task-states [data]="taskStates">
+        </utask-chart-task-states>
     </div>
     <div class="col-6">
         <table class="table">
