--- a/ui/dashboard/src/app/@routes/task/task.html
+++ b/ui/dashboard/src/app/@routes/task/task.html
@@ -149,8 +149,8 @@
           <div class="row">
             <div class="col-4">
               <h3>Steps</h3>
-              <steps-list [steps]="resolution.steps" *ngIf="resolution.steps" [selectedStep]="selectedStep">
-              </steps-list>
+              <utask-steps-list [steps]="resolution.steps" *ngIf="resolution.steps" [selectedStep]="selectedStep">
+              </utask-steps-list>
 
             </div>
             <div class="col-8 steps-viewer">
