--- a/ui/dashboard/src/app/@routes/templates/templates.html
+++ b/ui/dashboard/src/app/@routes/templates/templates.html
@@ -40,7 +40,7 @@
 
               </td>
               <td colspan="3">
-                <template-details [templateName]="template.name"></template-details>
+                <utask-template-details [templateName]="template.name"></utask-template-details>
               </td>
             </tr>
           </ng-template>
