--- a/ui/dashboard/src/styles.sass
+++ b/ui/dashboard/src/styles.sass
@@ -6,13 +6,13 @@
 @import "../node_modules/bootstrap/scss/bootstrap.scss"
 
 @import "styles/bloc.sass"
-@import "styles/step.sass"
-@import "styles/editor.sass"
-@import "styles/comment.sass"
 
 @import '~ngx-toastr/toastr'
 @import '~ngx-toastr/toastr-bs4-alert'
 @import '~ngx-toastr/toastr-bs4-alert'
+
+#editor
+  width: 100%
 
 .toast-error
   background-color: #f8d7da
