--- a/ui/dashboard/src/app/@routes/task/task.sass
+++ b/ui/dashboard/src/app/@routes/task/task.sass
@@ -10,3 +10,20 @@ header
             pointer-events: none
 .steps-viewer
     overflow: auto
+
+.utask_comments
+  padding: 0
+
+  .utask_comment
+    list-style: none
+    margin-top: 1rem
+    margin-bottom: 1rem
+    background: #fafafa
+    padding: 12px 16px 16px
+    border: 1px solid #dadce0
+    -webkit-box-shadow: 0 4px 6px rgba(0,0,0,.06)
+    box-shadow: 0 4px 6px rgba(0,0,0,.06)
+    -webkit-transition-property: background-color
+    transition-property: background-color
+    -webkit-transition-duration: .2s
+    transition-duration: .2s
