--- a/ui/dashboard/src/styles/colors.sass
+++ b/ui/dashboard/src/styles/colors.sass
@@ -4,9 +4,18 @@ $color-success: #28a745
 $color-primary: #007bff
 $color-info: #5578eb
 $color-secondary: #fff
-$color-dark: #242939
-$color-light: #f8f9fa
-$color-white: #fff
+$color-dark: #232946
+$color-light: #fffffe
+$color-white: #fffffe
+$color-text-dark: #24292e
+
+$bloc-primary: $color-dark
+$bloc-secondary: #434966
+$bloc-tercery: #636986
+$color-text: #262626
+$color-selection: #1A97F1
+$color-text-light: #f0f0f0
+$color-text-sub: #888
 
 $theme-colors: ("primary": $color-primary, "danger": $color-danger, "info": $color-info, "success": $color-success, "warning": $color-warning, "secondary": $color-secondary, "dark": $color-dark, "white": $color-white, "light": $color-light)
 
@@ -16,4 +25,4 @@ $bloc-section-bg: $color-white
 $bloc-section-color: darken($color-dark, 4%)
 
 $body-bg: $color-light
-$body-color: $color-dark
+$body-color: $color-text-dark
