--- a/ui/dashboard/src/styles.sass
+++ b/ui/dashboard/src/styles.sass
@@ -5,8 +5,14 @@
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss"
 
-@import "styles/bloc.sass"
-@import "styles/step.sass"
+@import '../node_modules/@angular/material/theming'
+@include mat-core()
+$my-app-primary: mat-palette($mat-blue)
+$my-app-accent:  mat-palette($mat-green)
+$my-app-warn:    mat-palette($mat-orange)
+$my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn)
+@include angular-material-theme($my-app-theme)
+
 @import "styles/editor.sass"
 @import "styles/comment.sass"
 
@@ -17,19 +23,18 @@
 .toast-error
   background-color: #f8d7da
   border: 1px solid #721c24
-  * 
+  *
     color: #721c24 !important
 .toast-info
   background-color: #cfd9f9
   border: 1px solid #2c3e7a
-  * 
+  *
     color: #2c3e7a !important
 .toast-warning
   background-color: #ffe5d0
   border: 1px solid #84420a
-  * 
+  *
     color: #84420a !important
-
 
 .fa-user-shield
   color: gold
@@ -149,30 +154,8 @@
     color: white !important
 
 .row
-  margin-left:0
-  margin-right:0
-g.node.node_selected polygon
-  stroke-width: 8
-  stroke-opacity: 0.5
-  stroke-linejoin: round
-  animation-duration: 0.3s
-  animation-name: slidein
-  animation-timing-function: ease-out
-g.node
-  cursor: pointer
-
-.edge_unselected path
-  opacity:0.05
-  stroke: black!important
-
-.label_unselected text
-  opacity:0
-
-.node_unselected
-  polygon
-    opacity:0.2
-  text
-    opacity:0
+  margin-left: 0
+  margin-right: 0
 
 @media (min-width: 576px)
 .modal-dialog
@@ -198,21 +181,104 @@ g.node
   .utask_username_me
     font-weight: bold
 
-
-
-// .table-responsive
-//   z-index: 999
-//   overflow-y: auto !important
-
-//   .dropdown-menu
-//     overflow-y: visible !important
-//     left:-80px !important
-//     button
-//       overflow-y: visible !important
-
 .container-fluid
-  padding-bottom:96px
-
+  padding-bottom: 96px
 
 .node:focus
   outline: unset
+
+utask-steps-viewer
+    g.edgePath > path
+      fill: transparent
+      stroke: black
+      stroke-width: 4px
+    marker > path
+      fill: black
+
+    g.edgePath.STANDARD
+      > path
+          stroke: black
+      marker > path
+          fill: black
+    g.edgePath.DONE
+      > path
+        stroke: #a0da57
+      marker > path
+        fill: #a0da57
+    g.edgePath.TO_RETRY
+      > path
+        stroke: #32acff
+      marker > path
+        fill: #32acff
+    g.edgePath.RUNNING
+      > path
+        stroke: #32acff
+      marker > path
+        fill: #32acff
+    g.edgePath.TODO
+      > path
+        stroke: #AAA
+      marker > path
+        fill: #AAA
+    g.edgePath.EXPANDED
+      > path
+        stroke: #32acff
+      marker > path
+        fill: #32acff
+    g.edgePath.CLIENT_ERROR
+      > path
+        stroke: #ff9803
+      marker > path
+        fill: #ff9803
+    g.edgePath.PRUNE
+      > path
+        stroke: #DDD
+      marker > path
+        fill: #DDD
+    g.edgePath.SERVER_ERROR
+      > path
+        stroke: #ff9803
+      marker > path
+        fill: #ff9803
+    g.edgePath.FATAL_ERROR
+      > path
+        stroke: #ff9803
+      marker > path
+        fill: #ff9803
+    g.edgePath.ANY 
+      > path
+        stroke: #ad0067
+        stroke-width: 6px
+      marker > path
+        fill: transparent
+
+    g.edgeLabel div
+      font-size: 40px
+
+    g.node.SELECTION > rect
+      stroke: $color-selection !important
+      stroke-width: 16px !important
+    g.node.HIDDEN, g.edgePath.HIDDEN
+      opacity: 0.15 !important
+
+app-box
+    position: relative
+    width: 100%
+    display: block
+    .app-box_dropdown
+        position: absolute
+        width: 180px
+        right: 0
+        top: 0
+        text-align: right
+        height: 33px
+        > .btn-group
+            width: 100%
+        > div
+            text-align: center
+
+.clear-after
+    &::after
+        content: " "
+        clear: both
+        display: block
