refactor: add utask-lib source inside main repository
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/ui/dashboard/src/app/@routes/functions/functions.html
+++ b/ui/dashboard/src/app/@routes/functions/functions.html
@@ -27,7 +27,7 @@
               <td>
               </td>
               <td colspan="1">
-                <utask-editor [value]="JSON.stringify(function, null, 4)" [config]="{readonly: true}"></utask-editor>
+                <lib-utask-editor [value]="JSON.stringify(function, null, 4)" [config]="{readonly: true}"></lib-utask-editor>
               </td>
             </tr>
           </ng-template>
