--- a/ui/dashboard/projects/utask-lib/src/lib/@components/tasks-list/tasks-list.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/tasks-list/tasks-list.sass
@@ -1,3 +1,12 @@
+:host
+  display: block
+  overflow: hidden
+  height: 100%
+
+nz-table
+  small
+    color: #676767
+
 $color-danger: #dc3545
 $color-warning: #fd7e14
 $color-success: #28a745
@@ -18,35 +27,6 @@ $body-color: $color-dark
 
 .utask_state_steps
   padding: 0 !important
-  .utask_state_steps-state
-    padding: 0.25rem 0.75rem 1.25rem 0.75rem
-    text-align: center
-    font-weight: 600
-
-    &__DONE
-      background: $color-success
-      color: white
-      padding: 0.75rem
-      transition: background 1.25s
-    &__RUNNING
-      background-color: $color-primary
-      background-image: linear-gradient(-45deg, transparent 33%, rgba(0, 0, 0, .1) 33%, rgba(0, 0, 0, .1) 66%, transparent 66%)
-      background-size: 4rem 2rem, 100% 100%, 100% 100%
-      animation: animate-state-running 1s linear infinite
-      color: white
-      transition: background 1.25s
-    &__CANCELLED, &__WONTFIX
-      background: $color-warning
-      color: white
-      transition: background 1.25s
-    &__BLOCKED
-      background: $color-danger
-      color: white
-      transition: background 1.25s
-    &__TODO
-      background: $color-primary
-      color: white
-      transition: background 1.25s
 
 .utask_tasks-list_table
   > tbody > tr
@@ -58,7 +38,7 @@ $body-color: $color-dark
       > .task_id
         margin: 0
         font-weight: 100
-        color:#676767
+        color: #676767
     > .task_actions
       width: 150px
       padding: 0.5rem
@@ -110,36 +90,18 @@ $body-color: $color-dark
     background: $bloc-section-bg
     color: $bloc-section-color
     padding: 12px 16px 12px 16px
-  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1)
-  margin: 0 18px 27px 18px
+    box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1)
+    margin: 0 18px 27px 18px
   &__LOADING *
     -webkit-filter: grayscale(1)
 
 @keyframes animate-state-running
   from
-      background-position-x: 0
+    background-position-x: 0
   to
-      background-position-x: 4rem
+    background-position-x: 4rem
 
-.utask_state_steps-steps
-  position: relative
-  margin-top: -15px
-  height: 15px
-  width: 100%
-  border-top: 1px solid white
-  background: #DDD
-  
-  .utask_state_steps-steps-progressbar
-    background: #AAA
-    height: 15px
-    transition: width 0.25s
-  
-  .utask_state_steps-steps-text
-    position: relative
-    width: 100%
-    margin-top: -15px
-    height: 15px
-    color: #333
-    font-size: 10px
-    text-align: center
-    font-weight: bold
+.send-request
+  margin-bottom: 16px
+  span
+    margin-left: 8px
