--- a/ui/dashboard/src/app/@routes/tasks/tasks.html
+++ b/ui/dashboard/src/app/@routes/tasks/tasks.html
@@ -16,5 +16,5 @@
   <lib-utask-input-tags (update)="inputTagsChanged($event);" [value]="pagination.tag" [placeholder]="'Search tags...'"
     [rawTags]="tags"></lib-utask-input-tags>
 </div>
-<lib-utask-tasks-list [meta]="meta" [params]="params" (routeTo)="routeTo($event)" (toastInfo)="toastInfo($event)"
+<lib-utask-tasks-list [meta]="meta" [params]="pagination" (routeTo)="routeTo($event)" (toastInfo)="toastInfo($event)"
   (toastError)="toastError($event)"></lib-utask-tasks-list>
