refactor(ui): search tags form component
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/ui/dashboard/src/app/@routes/tasks/tasks.sass
+++ b/ui/dashboard/src/app/@routes/tasks/tasks.sass
@@ -3,12 +3,9 @@
   display: flex
   flex-direction: column
 
-nz-select
-  margin: 0 8px 10px 0
-  width: 140px
-
 lib-utask-input-tags
-  display: inline-block
+  flex: 1
+  overflow: hidden
 
 lib-utask-tasks-list
   flex: 1
