feat(ui): allow to switch to dark theme

--- a/ui/dashboard/projects/utask-lib/src/lib/@components/input-tags/input-tags.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/input-tags/input-tags.sass
@@ -7,7 +7,7 @@ nz-select
 
 ::ng-deep
     .ant-select-item-empty
-        display: none
+        display: none !important
 
 .container
     padding: 4px 8px
